2015-11-06 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in 'sy/sylwrp_client.cpp' and 'sy/syclient_lwrp.h'
	where the 'SyLwrpClient::hostName()' method would return the connected
	IP address rather than the configured host name of the node.
2015-11-06 Fred Gleason <fredg@paravelsystems.com>
	* Added a 'SyLwrpClient::hostAddress()' method in 'sy/sylwrp_client.cpp'
	and 'sy/sylwrp_client.h'.
	* Added an 'SyNode' class in 'sy/synode.cpp' and 'sy/synode.h'.
	* Added a 'const SyNode *' parameter to the
	'LwrpClient::sourceChanged()' and 'LwrpClient::destinationChanged()'
	signals in 'sy/synode.cpp' and 'sy/synode.h'.
2015-11-11 Fred Gleason <fredg@paravelsystems.com>
	* Added 'SyLwrpClient::gpiChanged()' and 'SwLwryClient::gpoChanged()'
	signals in 'sy/sylwrp_client.cpp' and 'sy/sylwrp_client.h'.
	* Added an 'SyGpioBundle' class in 'sy/sygpiobundle.cpp' and
	'sy/sygpoiobundle.h'.
	* Added an 'SyGpo' class in 'sy/sygpo.cpp' and 'sy/sygpo.h'.
	* Added a test harness for 'SyLwrpClient in 'tests/synodetest.cpp'
	and 'tests/synodetest.h'.
2015-11-11 Fred Gleason <fredg@paravelsystems.com>
	* Extended the 'SyLwrpClient::setGpoSourceAddress()' methods to handle
	source stream addresses correctly.
2015-11-13 Fred Gleason <fredg@paravelsystems.com>
	* Added a 'SyRouting::sourceString()' method in 'sy/syrouting.cpp'
	and 'sy/syrouting.h'.
2015-11-14 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in 'sy/sylwrp_client.cpp' that caused GPO source
	addresses to be incorrect when the node entry included the name field.
2015-11-15 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in 'sy/sylwrp_client.cpp' that caused the
	'SyLwrpClient::setGpiCode()' method to fail intermittently.
2015-11-16 Fred Gleason <fredg@paravelsystems.com>
	* Added syslog calls in 'sy/sylwrp_client.cpp'.
2015-11-27 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in 'sy/symcastsocket.cpp' that broke reception of
	multicast datagrams.
	* Added sygpiotest(1) in 'tests/'.